--- a/components/commonComponents/NavbarComponent/NavbarComponent.scss
+++ b/components/commonComponents/NavbarComponent/NavbarComponent.scss
@@ -1,11 +1,11 @@
 :root {
   --site-bg: #0d0d1f;
+  --navbar-bg: #0f0f31;
   --site-text: #ffffff;
   --site-links-hover: #67e8f9;
 }
 
 .navbarStyles {
-  padding: 0px 20px;
   position: fixed;
   z-index: 9999;
   top: 0;
@@ -16,10 +16,15 @@
 .desktopNavbarStyles {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   transition: all 0.2s;
   height: 12vh;
   width: 100%;
+  padding: 0px 20px;
+
+  &.navBgActive {
+    background-color: var(--navbar-bg);
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+  }
 
   .logoContainer {
     display: flex;
@@ -65,6 +70,71 @@
       transition: all 0.2s;
       &:hover {
         color: var(--site-links-hover);
+      }
+    }
+  }
+}
+
+.mobileNavbarOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9998;
+}
+
+.mobileNavbarContainer {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 75%;
+  height: 100%;
+  background-color: var(--navbar-bg);
+  z-index: 9999;
+  padding: 20px 0;
+
+  .buttonContainer {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 20px;
+
+    .pi-times {
+      font-size: 20px;
+      color: var(--site-text);
+      cursor: pointer;
+      transition: all 0.2s;
+
+      &:hover {
+        color: var(--site-links-hover);
+      }
+    }
+  }
+
+  .navlinksContainer {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 25px;
+
+    .singleNavlink {
+      font-size: 18px;
+      color: var(--site-text);
+      cursor: pointer;
+      transition: all 0.2s;
+
+      &:hover {
+        color: var(--site-links-hover);
+
+        label {
+          border-bottom: 1px solid var(--site-links-hover);
+        }
+      }
+
+      label {
+        padding-bottom: 5px;
+        border-bottom: 1px solid var(--site-text);
       }
     }
   }
