--- a/components/commonComponents/MainSection/MainSection.scss
+++ b/components/commonComponents/MainSection/MainSection.scss
@@ -19,5 +19,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    .profilePictureContainer {
+      border-radius: 50%;
+      overflow: hidden;
+      width: 250px;
+      height: 250px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
   }
 }
