--- a/components/commonComponents/MainSection/MainSection.scss
+++ b/components/commonComponents/MainSection/MainSection.scss
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   height: 100dvh;
+  width: 100%;
   color: var(--site-text);
   overflow: hidden;
 
@@ -19,8 +20,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 60%;
+    gap: 1rem;
 
     .profilePictureContainer {
+      border: 1px solid var(--site-text);
       border-radius: 50%;
       overflow: hidden;
       width: 200px;
@@ -31,6 +35,37 @@
         height: 100%;
         object-fit: cover;
       }
+    }
+
+    .taglineContainer {
+      text-align: center;
+      font-size: 2.5rem;
+      font-weight: bold;
+      line-height: 1.25;
+
+      span {
+        color: var(--site-links-hover);
+      }
+    }
+
+    .introlineContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0.5rem;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: 500;
+      line-height: 1.5;
+      width: 100%;
+
+      span {
+        color: var(--site-links-hover);
+      }
+    }
+
+    .workButton {
+      border-radius: 25px;
     }
   }
 }
