--- a/components/commonComponents/MainSection/MainSection.scss
+++ b/components/commonComponents/MainSection/MainSection.scss
@@ -14,8 +14,18 @@
   width: 100%;
   color: var(--site-text);
   overflow: hidden;
+  position: relative;
+
+  .particleWrapper {
+    position: absolute;
+    inset: 0;
+    z-index: 0;
+    pointer-events: none;
+  }
 
   .parentContainer {
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
