minor css fixes

--- a/components/components/ExperienceSection/ExperienceSection.scss
+++ b/components/components/ExperienceSection/ExperienceSection.scss
@@ -94,7 +94,8 @@
       }
 
       .locationText {
-        font-size: 1rem;
+        align-items: center;
+        font-size: 0.9rem;
         font-weight: 400;
         margin-bottom: 5px;
       }
