--- a/components/components/ContactSection/ContactSection.scss
+++ b/components/components/ContactSection/ContactSection.scss
@@ -17,6 +17,14 @@
     gap: 30px;
     padding: 0 25px;
 
+    @media (max-width: 1024px) {
+      padding: 0 10px;
+    }
+
+    @media (max-width: 425px) {
+      width: -webkit-fill-available;
+    }
+
     // Contact details -----------
     .headerSection {
       display: flex;
@@ -66,6 +74,7 @@
       display: flex;
       gap: 20px;
       flex-wrap: wrap;
+      margin-bottom: 1rem;
 
       .iconLinkButton {
         i {
@@ -87,7 +96,7 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
-      background-color: var(--form-bg);      
+      background-color: var(--form-bg);
     }
   }
 }
