--- a/app/globals.css
+++ b/app/globals.css
@@ -41,8 +41,7 @@ html {
 
 .p-button {
     border-radius: 0.5rem;
-    height: 48px !important;
-    width: auto !important;
+    height: 44px !important;
     background: var(--site-button-bg);
     border: none;
 
@@ -116,6 +115,15 @@ html {
     border: 1px solid var(--site-button-bg) !important;
     color: var(--site-text) !important;
     border-radius: 0.5rem !important;
+    padding: 0.5rem !important;
+
+    @media (max-width: 768px) {
+        font-size: 1rem !important;
+    }
+
+    @media (max-width: 480px) {
+        font-size: 0.875rem !important;
+    }
 
     &:focus {
         border-color: var(--site-links-hover) !important;
