--- a/components/components/SkillSection/SkillSection.scss
+++ b/components/components/SkillSection/SkillSection.scss
@@ -28,6 +28,18 @@
       font-weight: bold;
     }
 
+    @media (max-width: 768px) {
+      .headerContainer {
+        font-size: 1.25rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .headerContainer {
+        font-size: 1rem;
+      }
+    }
+
     .skillsListContainer {
       width: 100%;
     }
