commit for navbar handling for devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,6 +51,11 @@ html {
         font-weight: 500 !important;
     }
 
+    @media (max-width: 480px) {
+        width: revert-layer !important;
+        
+    }
+
     &:hover {
         background: var(--site-button-hover-bg);
     }
