--- a/components/components/NavbarComponent/NavbarComponent.scss
+++ b/components/components/NavbarComponent/NavbarComponent.scss
@@ -125,7 +125,7 @@
     gap: 25px;
 
     .singleNavlink {
-      font-size: 18px;
+      font-size: 1rem;
       color: var(--site-text);
       cursor: pointer;
       transition: all 0.2s;
