--- a/components/components/ExperienceSection/ExperienceSection.scss
+++ b/components/components/ExperienceSection/ExperienceSection.scss
@@ -61,7 +61,7 @@
   }
 
   @media (max-width: 480px) {
-    padding: 10px;
+    padding: 10px 15px;
 
     .expDetailsContainer {
       .headerText {
